# lab6

./: README.md  deb.yml
.github/workflows/: deb.yml  dmg.yml  main.yml  msi.yml
solver_application/: CMakeLists.txt
solver_application/_output3/: CMakeCache.txt  CPackConfig.cmake  Makefile  Solver.sh
solver_application/_output3/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/_output3/formatter_ex/formatter_lib/: cmake_install.cmake
solver_application/_output3/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/_output3/solver_lib/: cmake_install.cmake
solver_application/_output3/_CPack_Packages/Linux-Source/ZIP/solver-0.1.1-Source/: CMakeLists.txt
solver_application/_output3/_CPack_Packages/Linux-Source/ZIP/solver-0.1.1-Source/_output3/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/_output3/: CPackSourceConfig.cmake  Solver.tar.Z  cmake_install.cmake  install_manifest.txt
solver_application/_output3/_CPack_Packages/Linux-Source/ZIP/solver-0.1.1-Source/_output3/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/_output3/formatter_ex/: cmake_install.cmake
solver_application/_output3/formatter_ex/: Makefile
solver_application/_output3/formatter_ex/formatter_lib/: Makefile
solver_application/_output3/solver_lib/: Makefile
